--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,6 +119,26 @@ services:
     ports:
       - "8089:8089"
 
+  pig:
+    build:
+      context: ./pig
+      dockerfile: Dockerfile
+    image: bde2020/hadoop-pig:master
+    container_name: pig
+    depends_on:
+      - namenode
+      - datanode
+      - resourcemanager
+    env_file:
+      - ./hadoop.env
+    environment:
+      CORE_CONF_fs_defaultFS: hdfs://namenode:9000
+      SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088"
+    volumes:
+      - ./scripts:/root/scripts
+    stdin_open: true
+    tty: true
+
 volumes:
   hadoop_namenode:
   hadoop_datanode:
