--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,17 +123,18 @@ services:
     build:
       context: ./pig
       dockerfile: Dockerfile
-    image: bde2020/hadoop-pig:master
+    image: bde2020/hadoop-pig:latest
     container_name: pig
     depends_on:
       - namenode
       - datanode
       - resourcemanager
+      - historyserver
     env_file:
       - ./hadoop.env
     environment:
       CORE_CONF_fs_defaultFS: hdfs://namenode:9000
-      SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088"
+      SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088 historyserver:8188"
     volumes:
       - ./scripts:/root/scripts
     stdin_open: true
